Iskander Amangaliyev – fixed entity